# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: pipenv_dev_requirements_fixer.py  pipenv_requirements_fixer.py
