[metadata]
name = breathecode_pre_commit_hooks
version = 4.3.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/breatheco-de/pre-commit-hooks
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*
    Pipfile
    Pipfile.lock

[options.entry_points]
console_scripts =
    pipenv-requirements-fixer = pre_commit_hooks.pipenv_requirements_fixer:main
    pipenv-dev-requirements-fixer = pre_commit_hooks.pipenv_dev_requirements_fixer:main

[bdist_wheel]
universal = True
